--- a/css/profile.css
+++ b/css/profile.css
@@ -83,12 +83,29 @@ header{
     width:90%;
 
     position:absolute;
-    top:20%;
+    top: 30%;
     left:50%;
-    transform: translateX(-50%);
+    transform: translate(-50%,-30%);
 }
-
 p{
     line-height: 0.9;
     font-size: 80%;
+}
+.some_links{
+    width:100%;
+}
+.link_container{
+    width:100%;
+    height: 7vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 30px;
+    box-shadow: 0px 0px 6px 0px rgba(150, 150, 150, 0.45);
+}
+.link_github{
+    width: 45px;
+    height: auto;
+    display: block;
 }
