--- a/css/works.css
+++ b/css/works.css
@@ -39,7 +39,6 @@ header {
 .first_box{
     min-height: 80%;
     width:100%;
-    background-color: black;
 
     position: relative;
 }
@@ -52,13 +51,122 @@ header {
 
     left:50%;
     transform: translateX(-50%);
+}
+.icons_container{
+    width:100%;
+    height:13vh;
 
-    background-color: aqua;
+    display: flex;
+
+    border-radius: 15px;
+
+    box-shadow: 0px 0px 4px 0px rgba(197, 197, 197, 0.45) inset;
+}
+.icon{
+    height: 100%;
+    aspect-ratio: 1/1;
+
+    position: relative;
+}
+.icon-bg{
+    width: 80%;
+    aspect-ratio:1/1;
+
+    position:absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    background-color: white;
+
+    border-radius: 15px;
+    box-shadow: 0px 0px 3px 0px rgba(197, 197, 197, 0.45);
+
+    position:relative;
+}
+.icon img{
+    width: 90%;
+    height: auto;
+
+    position:absolute;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+}
+.all{
+    width:50%;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+
+    text-align: center;
 }
 
-.icons{
-    width:100%;
-    height:100%;
+.contents{
+    margin-top: 5%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap:3%;
+}
+.article_container{
+    width:30%;
+    height:55vh;
 
-    background-color: yellow;
+    margin-left: auto;
+    margin-right: auto;
+
+    position:relative;
+
+    border-radius: 20px;
+    box-shadow: 0px 0px 3px 0px rgba(197, 197, 197, 0.45);
+}
+.article{
+    width:90%;
+
+    position:absolute;
+    left:50%;
+    transform:translateX(-50%);
+}
+#article_img{
+    width:100%;
+
+    margin-top:2vh;
+
+    box-shadow: 0px 10px 10px -6px rgba(197, 197, 197, 0.45);
+}
+.work_title{
+    margin-top:1vh;
+    font-size: 1.5vw;
+    font-weight: bold;
+}
+.work_desc{
+    margin-top:1vh;
+    overflow-wrap: break-word;
+
+    border-left: solid 1px black;
+    padding-left: 1%;
+}
+.work_desc p{
+    margin:0;
+}
+.tech-box{
+    margin-top:2vh;
+    width: 100%;
+
+    display: flex;
+}
+.work_tech{
+    width:85%;
+}
+.work_tech p{
+    margin:0;
+}
+.git_link{
+    width:15%;
+}
+.git_link img{
+    margin:0;
+    width:100%;
+    height: auto;
 }
