--- a/css/works.css
+++ b/css/works.css
@@ -102,15 +102,20 @@ header {
     text-align: center;
 }
 
-.contents{
+/**//**//**//**//**/
+.under-box{
+    position:relative;
+}
+
+.contents {
     margin-top: 5%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap:3%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3%;
+    justify-items: center;
 }
 .article_container{
-    width:30%;
+    width:100%;
     height:57vh;
 
     margin-left: auto;
@@ -169,4 +174,13 @@ header {
     margin:0;
     width:100%;
     height: auto;
+}
+
+#no_result{
+    margin-top:20vh;
+
+    position: absolute;
+    left:50%;
+    top:30%;
+    transform:translateX(-50%);
 }
